[tool.poetry]
authors = ["Andrii Sherman <watemerald@gmail.com>"]
description = "An attempt at generating pokemon"
name = "pokemon-gan"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.0.8"
pytorch-lightning-bolts = "^0.2.5"
torch = "^1.7.0"
torchvision = "^0.8.1"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
data-science-types = "^0.2.16"
flake9 = "^3.8.3"
isort = "^5.3.2"
jupyter = "^1.0.0"
mypy = "^0.782"
pytest = "^6.0.1"

[tool.poetry.scripts]
main = "pokemon_gan.main:main"

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".git,__pycache__"
ignore = "E501, W503"

[tool.pytest.ini_options]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
